<resources>
    <string name="app_name">Trevis</string>
    <string name="need_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="radioBtn_male">Male</string>
    <string name="radioBtn_female">Female</string>
    <string name="mobile">Mobile</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using Trevis</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_chat">ChatActivity</string>


    <!-- Api request URLs' -->
    <string name="API_COMMON_URL">http://192.168.8.100:9000/</string>
    <string name="GET_All_USERS_URL">http://192.168.8.100:9000/getAll</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_trouble">TroubleActivity</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_activity_ble">BLEActivity</string>


    <string name="access_token" translatable="false">pk.eyJ1IjoidjMiLCJhIjoiY2poaW5wcWZoMG05eTM2cnhydHIwZ2k2eSJ9.Q2vTVmvE-LLig9XgV0z4CA</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="action_settings">Settings</string>
</resources>
